@@ -1,5 +1,9 @@
 2010-07-21
 
+	* src/prefs_template.c: notify on OK button press if not saved.
+
+2010-07-21
+
 	* src/prefs_template.c: confirm on cancel if templates are modified.
 	  Added Up/Down button to reorder template list.
 
